--- a/.github/workflows/pms-ci.yml
+++ b/.github/workflows/pms-ci.yml
@@ -2,9 +2,9 @@ name: PMS-CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   test:
