--- a/.github/workflows/pms-ci.yml
+++ b/.github/workflows/pms-ci.yml
@@ -39,6 +39,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Run migrations
+      run: |
+        cd property_management_system
+        python manage.py migrate
     - name: Run Tests
       run: |
         cd property_management_system
