--- a/.github/workflows/pms-ci.yml
+++ b/.github/workflows/pms-ci.yml
@@ -48,7 +48,7 @@ jobs:
         DB_HOST: ${{ vars.DB_HOST }}
         DB_PORT: ${{ vars.DB_PORT }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        DB_USER: ${{ vars.DB_USER
+        DB_USER: ${{ vars.DB_USER }}
     - name: Run Tests
       run: |
         cd property_management_system
