feat: Added messaging chat between Landlords and Tenants

--- a/.github/workflows/pms-ci.yml
+++ b/.github/workflows/pms-ci.yml
@@ -65,6 +65,7 @@ jobs:
         bandit -r . -c pyproject.toml
     - name: Run Safety
       run: |
+        pip install safety
         safety check
       continue-on-error: true
     - name: Run Ruff
