--- a/.github/workflows/pms-ci.yml
+++ b/.github/workflows/pms-ci.yml
@@ -59,16 +59,16 @@ jobs:
         DB_PORT: ${{ vars.DB_PORT }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_USER: ${{ vars.DB_USER }}
+    - name: Install Actions dependencies
+      run: |
+          pip install bandit && safety && ruff
     - name: Run Bandit
       run: |
-        pip install bandit
         bandit -r . -c pyproject.toml
     - name: Run Safety
       run: |
-        pip install safety
         safety check
       continue-on-error: true
     - name: Run Ruff
       run: |
-          pip install ruff
-          ruff check --fix .
+          ruff check .
