--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+bandit==1.8.6
 cfgv==3.4.0
 distlib==0.4.0
 Django==5.2.3
@@ -14,6 +15,8 @@ platformdirs==4.3.8
 pre_commit==4.2.0
 psycopg2-binary==2.9.10
 PyYAML==6.0.2
+ruff==0.3.0
+safety==2.3.5
 sqlparse==0.5.3
 tzdata==2025.2
 virtualenv==20.31.2
