--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,39 @@
+
 [tool.bandit]
 exclude_dirs = ["tests", "dashboard/management/commands/t.py"]
+
+[project]
+name = "property-management-system"
+version = "0.1.0"
+description = ""
+authors = [
+    {name = "Your Name",email = "you@example.com"}
+]
+readme = "README.md"
+requires-python = ">=3.13,<4"
+dependencies = [
+    "django (>=5.2.7,<6.0.0)",
+    "django-debug-toolbar (>=6.0.0,<7.0.0)",
+    "django-environ (>=0.12.0,<0.13.0)",
+    "django-silk (>=5.4.3,<6.0.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "django-extensions (>=4.1,<5.0)"
+]
+
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
+
+[dependency-groups]
+dev = [
+    "pre-commit (>=4.3.0,<5.0.0)",
+    "factory-boy (>=3.3.3,<4.0.0)",
+    "ruff (>=0.13.3,<0.14.0)",
+    "safety (>=3.6.2,<4.0.0)"
+]
