--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,6 @@ dev = [
     "pre-commit (>=4.3.0,<5.0.0)",
     "factory-boy (>=3.3.3,<4.0.0)",
     "ruff (>=0.13.3,<0.14.0)",
-    "safety (>=3.6.2,<4.0.0)"
+    "safety (>=3.6.2,<4.0.0)",
+    "bandit (>=1.8.6,<2.0.0)"
 ]
