--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,5 +36,7 @@ dev = [
     "factory-boy (>=3.3.3,<4.0.0)",
     "ruff (>=0.13.3,<0.14.0)",
     "safety (>=3.6.2,<4.0.0)",
-    "bandit (>=1.8.6,<2.0.0)"
+    "bandit (>=1.8.6,<2.0.0)",
+    "mypy (>=1.18.2,<2.0.0)",
+    "mypy (>=1.18.2,<2.0.0)"
 ]
