--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: Django Tests
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Lint"]
+    types:
+      - completed
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+
 
 
 env:
