--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,59 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  redis:
+    container_name: redis
+    image: redis:8.2.2-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  celery:
+    container_name: celery
+    restart: unless-stopped
+    build:
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/app
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file:
+      - .env
+    environment:
+      - DB_HOST=db
+      - REDIS_HOST=redis
+      - PYTHONPATH=/app/src
+    command: sh -c "cd src && celery -A core worker -l info"
+  celery-beat:
+    container_name: celery-beat
+    restart: unless-stopped
+    build:
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/app
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file:
+      - .env
+    environment:
+      - DB_HOST=db
+      - REDIS_HOST=redis
+      - PYTHONPATH=/app/src
+    command: sh -c "cd src && celery -A core beat -l info"
 
 volumes:
   postgres_data:
+  redis_data:
