--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "djangorestframework (>=3.16.1,<4.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "requests (>=2.32.5,<3.0.0)",
-    "django-extensions (>=4.1,<5.0)"
+    "django-extensions (>=4.1,<5.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "redis (>=6.4.0,<7.0.0)",
+    "flower (>=2.0.1,<3.0.0)"
 ]
 
 
