--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "django-extensions (>=4.1,<5.0)",
     "celery (>=5.5.3,<6.0.0)",
     "redis (>=6.4.0,<7.0.0)",
-    "flower (>=2.0.1,<3.0.0)"
+    "flower (>=2.0.1,<3.0.0)",
+    "bandit (>=1.8.6,<2.0.0)"
 ]
 
 
@@ -39,10 +40,6 @@ dev = [
     "factory-boy (>=3.3.3,<4.0.0)",
     "ruff (>=0.13.3,<0.14.0)",
     "safety (>=3.6.2,<4.0.0)",
-    "bandit (>=1.8.6,<2.0.0)",
     "mypy (>=1.18.2,<2.0.0)",
     "mypy (>=1.18.2,<2.0.0)"
 ]
-
-[tool.poetry.group.dev.dependencies]
-bandit = "^1.7.9"
