--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,20 @@ services:
       - REDIS_HOST=redis
       - PYTHONPATH=/app/src
     command: sh -c "cd src && celery -A core beat -l info"
+  flower:
+    container_name: flower
+    restart: unless-stopped
+    build: .
+    command: celery -A core flower --port=5555
+    ports:
+      - "5555:5555"
+    depends_on:
+      - celery
+      - redis
+    environment:
+      - REDIS_HOST=redis
+      - PYTHONPATH=/app/src
+
 
 volumes:
   postgres_data:
