--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ dependencies = [
     "celery (>=5.5.3,<6.0.0)",
     "redis (>=6.4.0,<7.0.0)",
     "flower (>=2.0.1,<3.0.0)",
-    "bandit (>=1.8.6,<2.0.0)",
-    "reportlab (>=4.2.5,<5.0.0)"
+    "reportlab (>=4.2.5,<5.0.0)",
+    "bandit (>=1.8.6,<2.0.0)"
 ]
 
 
