--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,8 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_passowrd
 DB_HOST=your_db_host
 DB_PORT=your_db_port
+
+
+# FLOWER SETTINGS
+FLOWER_USER=admin
+FLOWER_PASSWORD=strong_password
