--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -29,4 +29,4 @@ RUN python src/manage.py collectstatic --noinput
 
 EXPOSE 8000
 
-CMD ["gunicorn", "src.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000"]
