update:deploy.sh

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -8,7 +8,7 @@ upstream flower {
 
 server {
     listen 80;
-    server_name _;
+    server_name property.stowarzyszenie-ohana.pl;
 
     client_max_body_size 100M;
 
