--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -10,6 +10,19 @@ server {
     listen 80;
     server_name property.stowarzyszenie-ohana.pl;
 
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name property.stowarzyszenie-ohana.pl;
+
+    ssl_certificate     /etc/ssl/certs/origin_certificate.pem;
+    ssl_certificate_key /etc/ssl/private/origin_private_key.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     client_max_body_size 100M;
 
     location /static/ {
