--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    depends_on:
+      - app
+      - flower
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
@@ -14,6 +17,8 @@ services:
       - static_volume:/app/src/staticfiles
       - ./certs/origin_certificate.pem:/etc/ssl/certs/origin_certificate.pem:ro
       - ./certs/origin_private_key.pem:/etc/ssl/private/origin_private_key.pem:ro
+
+
   app:
     container_name: app
     restart: unless-stopped
@@ -30,6 +35,7 @@ services:
     environment:
       - DB_HOST=db
       - PYTHONPATH=/app/src
+
   db:
     container_name: db
     restart: unless-stopped
@@ -60,6 +66,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
   celery:
     container_name: celery
     restart: unless-stopped
@@ -80,6 +87,7 @@ services:
       - REDIS_HOST=redis
       - PYTHONPATH=/app/src
     command: sh -c "cd src && celery -A core worker -l info --concurrency=4"
+
   celery-beat:
     container_name: celery-beat
     restart: unless-stopped
@@ -101,6 +109,7 @@ services:
       - REDIS_HOST=redis
       - PYTHONPATH=/app/src
     command: sh -c "cd src && celery -A core beat -l info --schedule=/app/schedule/celerybeat-schedule"
+
   flower:
     container_name: flower
     restart: unless-stopped
@@ -116,8 +125,6 @@ services:
     environment:
       - REDIS_HOST=redis
       - PYTHONPATH=/app/src
-
-
 
 volumes:
   postgres_data:
